# codecat

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecat.spec  generate_version_file.py  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stale.yml
src/codecat/: __init__.py  __main__.py  cli_app.py  config.py  constants.py  file_processor.py  file_scanner.py  markdown_generator.py  web_ui.py
tests/: __init__.py  conftest.py  test_cli_app.py  test_config.py  test_file_processor.py  test_file_scanner.py  test_markdown_generator.py  test_web_ui.py
